tests/NormalTests/paczka1/fuzzy1/52247008.err
Error in line 3: lak S689 5,0
Error in line 1: IUwn A675 99,6
Error in line 13: S294 S294 55,0
Error in line 21: lak A542 97,5
Error in line 35: lak S294 316,10
